# sitecheck

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/sitecheck/: __init__.py  cli.py  models.py  report.py  simulator.py
src/sitecheck/detector/: __init__.py  classifier.py  model.py  standards.py
src/sitecheck/inspector/: __init__.py  checklist.py  photo.py  report_gen.py
tests/: test_benchmark.py  test_core.py  test_detector.py  test_inspector.py  test_integration.py  test_models.py  test_simulator.py
